force-app/main/default/objects/C360_OverduePayment__c.object
<CustomObject>
    <fields>
        <fullName>AmountinLocalCurrency__c</fullName>
        <label>Amount in Local Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>As_of__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As of</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CompanyCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Overdue Payment</relationshipLabel>
        <relationshipName>Overdue_Payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocCurrency__c</fullName>
        <label>Doc Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocumentNumber__c</fullName>
        <label>DocumentNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>FiscalYear</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OverdueAmountinDocCurrency__c</fullName>
        <label>Overdue Amount in Doc Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdueday__c</fullName>
        <label>Overdue day</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Overdue Payment</label>
    <nameField>
        <displayFormat>OVP{0000000}</displayFormat>
        <label>Overdue Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>